# doc-suggester

./: .gitignore  README.md  go.mod  hatch_build.py  main.go  pyproject.toml
forge-plugin/: pyproject.toml
forge-plugin/src/forge_doc_suggester/: __init__.py  plugin.py
forge-plugin/tests/: test_plugin.py
llgen/: go.mod  go.sum  main.go
llgen/data/: labmap.go
llgen/internal/claude/: client.go
llgen/internal/collect/: github.go  pptx.go  youtube.go
llgen/internal/config/: config.go
llgen/internal/generate/: catalog.go  improvements.go  index.go  personas.go  recommender.go
llgen/internal/transform/: corpus.go  vtt.go
src/doc_suggester/: __main__.py  blog_manager.py  cli.py  docs_client.py  labs_manager.py  suggester.py  synopsis_generator.py
src/doc_suggester/prompts/: email_format.txt
tests/: test_blog_manager.py  test_labs_manager.py  test_suggester.py  test_synopsis_generator.py
