[project]
name = "forge-doc-suggester"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "doc-suggester>=0.1.0",
    "forge-core>=0.1.0",
]

[project.entry-points."forge.plugins"]
doc-suggester = "forge_doc_suggester.plugin:create_plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forge_doc_suggester"]
