[project]
name = "forge-doc-suggester"
version = "0.1.0"
description = "FORGE plugin: recommend Chainguard blogs and docs from SE prospect notes"
requires-python = ">=3.12"
dependencies = [
    "doc-suggester @ git+https://github.com/mbarretta/doc-suggester.git",
    "forge-core>=0.1.0",
]

[project.entry-points."forge.plugins"]
doc-suggester = "forge_doc_suggester.plugin:create_plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/forge_doc_suggester"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

# Local development overrides — these are only applied when working in the
# doc-suggester workspace directly (uv ignores them during remote git installs).
[tool.uv.sources]
doc-suggester = { path = ".." }
